# python_network_program_study

./: .gitmodules  README.md  dict.py  hello.py  read-write.py  zdump.py
PIL/: demo1.py
catch-import-error/: catch-import-error.py
ch2_basic/: break01.py  class01.py  class02.py  class03.py  class04.py  class05.py  class06.py  continue01.py  exception.py  exception02.py  for01.py  for02.py  function01.py  function02.py  function03.py  function04.py  function05.py  function06.py  function07.py  function08.py  function09.py  function10.py  if01.py  if02.py  model01.py  model02.py  model03.py  num.py  string.py  while01.py
ch2_basic/file/: file01.py  file02.py  file03.py  file04.py
ch2_basic/json/: json01.py  json02.py
ch2_basic/stringio/: stringio.py
ch3_tcp_ip/app/: http_demo.py
ch3_tcp_ip/ip/: network01.py
ch3_tcp_ip/link/: get_mac.py  get_mac2.py
ch3_tcp_ip/transport/: transport.py
ch4_socket/: socket01.py
ch4_socket/tcp/: 01_cli.py  01_ser.py  scan_port.py
ch4_socket/tcp/download_file/: socket_03c.py  socket_03s.py
ch4_socket/udp/: cpu_usage.py  cpu_usage_cli.py
compress_decompress/: compress-demo.py
cut-bytes/: cut-bytes.py
demo/: inter.py  list.py  yield.py
flask-http-ser/demo1/: hello.py
flask-http-ser/upload-file/: upload-2.py  upload.py
flask-http-ser/zmq-controller/: controller.py  zmq_common.py  zmq_proc.py
function-parser/: .gitignore  BUILD  README.md  cmake-parser.py  function-parser.py  function.data  log.py  test.py
function-parser/cmakes/: factor.cmk  hlir.cmk  liveness.cmk  llir.cmk  op_define.cmk  profile.cmk
function-parser/test_data/: CMakeLists.txt  cmake.data  function_full.data
halo_test/: demo.py  example.py  halo_cmd.py  multicast.py  select_V0_2.py
halo_test/release/: 2019_plan.md  README.md  halo_cmd.py  halotest.py
halo_test/release/dev_db/: condition.db  condition.md  condition2.db  condition_mini.db  device.db  scene.db
halo_test/src/: database.py  demo.py  halo_cmd.py  select_V0_1.py  select_V0_2.py
halo_test/src/dev_db/: scene.db
hope_simulator/: down.py  hope_post.py
hope_simulator/src/: .gitignore  demo.py  halo_cmd.py  halo_parse.py  hope_main.py  hope_music.py  hope_netif.py  hope_parse.py  hope_post.py  hope_protocol.py  hope_regist.py  hope_utils.py
iot-upnp/: demo1.py  demo2.py
iter_generator/: LineHistory.py  simpleGenerator.py  simpleIter.py  simpleIterClass.py
jinding_config_build/: .~lock.relation.xlsx#  excel_module.py  relation.xlsx  simulator.py  state.json
jinding_config_build/config/: 凉干.json  凉风内.json  凉风扇外.json  取暖.json  如厕场景.json  换气扇内.json  换气扇外.json  摆风.json  洗浴场景.json  洗漱场景.json  热干.json  照明.json  电源.json  离开.json  空气检测.json  负离子.json  音乐.json  风速.json
jinding_config_build/tmp_V01/: build.py  excel_module.py  relation.xlsx  simulator.py  state.json
jinding_config_build/tmp_V01/config/: 凉干.json  凉风内.json  凉风扇外.json  取暖.json  如厕场景.json  换气扇内.json  换气扇外.json  摆风.json  洗浴场景.json  洗漱场景.json  热干.json  照明.json  电源.json  离开.json  空气检测.json  负离子.json  音乐.json  风速.json
jinding_config_build/tmp_V02/: .~lock.relation.xlsx#  build.py  depend.json  excel_module.py  relation.xlsx  simulator.py
jinding_config_build/tmp_V02/config/: 凉干.json  凉风内.json  凉风扇外.json  取暖.json  取暖模式.json  如厕场景.json  换气扇内.json  换气扇外.json  洗浴场景.json  洗漱场景.json  热干.json  照明.json  电源.json  离开.json  空气检测.json  音乐.json  风速.json
jinding_config_build/tmp_V03/: .~lock.relation.xlsx#  build.py
jinding_config_build/tmp_V04/: .~lock.relation.xlsx#  relation.xlsx  simulator.py
jinding_config_build/tmp_V04/module/: reset.json  scene.json
jinding_config_build/tmp_V05/: .~lock.relation.xlsx#  build.py  relation.xlsx  state.json
jinding_config_build/tmp_V05/module/: major.rule  scene.conf  scene.json  state.json  取暖.conf  换气.conf  热干.conf
jinding_config_build/tmp_V06/: build.py  state_machine.lua
jinding_config_build/tmp_V06/module/: indep.conf  major.rule  scene.conf  state.json  凉风(内).conf  取暖.conf  换气.conf
jinding_config_build/tmp_V10/: .~lock.relation.xlsx#  README.md  relation.xlsx  state_machine.lua
jinding_config_build/tmp_V10/module/: indep.conf  major.rule  state.json  取暖.conf
jinding_config_build/tmp_V11/: build.py  state_machine  state_machine.c  state_machine.lua
jinding_config_build/tmp_V12/: Makefile  build.py  state_machine  state_machine.c  state_machine.lua
jinding_config_build/tmp_V13/: Makefile  build.py  excel_module.py  language.lua  relation.xlsx  state_machine.lua
jinding_simulator/: jinding_simulator.py
json_ui_config/: .~lock.relation.xlsx#  build.py  button.json  excel_module.py  excel_read_demo.py  index.json  relation.xlsx  state.json  touch_file.py
json_ui_config/config/: 凉干.json  凉风内.json  凉风扇外.json  取暖.json  如厕场景.json  换气扇内.json  换气扇外.json  摆风.json  洗浴场景.json  洗漱场景.json  热干.json  照明.json  电源.json  离开.json  空气检测.json  负离子.json  音乐.json  风速.json
leetcode/: 0001_two_numbers_addition.py  0002_addTwoNumbers.py  0003_lengthOfLongestSubstring.py  0053_maxSubArray.c  0058_lengthOfLastWord.py  0069_mySqrt.py  0167_twoSum.py  169.majority-element.py  258.add-digits.py  292.nim-game.py  66.plus-one.py  70.climbing-stairs.py
leetcode/match/: 984_strWithout3a3b.py
log-module/: log.py
loop/: loop.py
multi-porcess/: mqtt-multiproc.py  multi-demo-class.py  multi-demo.py
pythonbook/ch3_simple_num/: 01_enum.py  02_for.py
scraping/02_girl_scraping/: down.py  hope.py  re_ex.py  url.py
scraping/baidubaike/: baike.py  baike2.py
scraping/gerrit/: commit2chnum.py  stack.py  test.py
ssh-scp/: arpscan.py  git-arpscan.py
state_machine/: build.py  rule  test.py
state_machine/release_0.1/: README.md  build.py  rule  test.py
state_machine/release_0.2/: README.md  aaa  build.py  rule
test/test_assert/: myUnitTest.py
test/test_case/: case1.py  test.sh
tkinter/: demo1.py
topic_list/: topic_list.py
tuple/: combination.py
web-scraping/ch1/: scrapetest.py
web-scraping/ch2/: scrape_css.py  scrape_regex.py  scrape_tags.py
web-scraping/ch3/: crawler-douban.py  web-crawler.py
withClass/: demoClass.py  demoClass2.py
(+26 files in other folders)
